# research-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  V2_TEST_PLAN.md  pyproject.toml  quick_test_v2.ps1  run.bat  run.py  start_web.bat  test_import.py
docs/: Deep Research架构诊断报告.md  architecture.md  deep_research_refactor_plan.md  design_decisions.md  development_guide.md  project_evaluation.md  user_research.md  v2 deep research流程与关键参数.md
docs/elicit/: Elicit - extract-results-review-f91dd299-1104-45e0-a3cf-1663c07e7ed8.csv  Elicit - gather-results-review-f91dd299-1104-45e0-a3cf-1663c07e7ed8.csv  Elicit - screen-results-review-f91dd299-1104-45e0-a3cf-1663c07e7ed8.csv  Elicit - 深度文献综述技术架构与挑战 - Sources.txt
docs/gpt生成的/: chatgpt5.2给出的项目建议.md  elicit怎么获得pdf原文内容的.md  pdf是否能直接获取.md  文献综述 Deep Research 产品功能结构图.md  论文观点追溯.md
src/: __init__.py  __version__.py  main.py
src/agents/: __init__.py  intent_router.py
src/agents/deep_research/: __init__.py  decomposer.py  fulltext_research_agent.py  orchestrator.py  report_generator.py  research_agent.py
src/memory/: __init__.py
src/rag/: __init__.py  compressor.py
src/tools/: abstract_summarizer.py  paper_screener.py  query_analyzer.py  query_translator.py  reading_guide.py
src/tools/pdf/: __init__.py  arxiv_downloader.py  chunker.py  paper_processor.py  pdf_parser.py
src/tools/search/: __init__.py  arxiv_search.py  openalex_search.py  semantic_scholar.py  (+1 more)
src/utils/: __init__.py  config.py  llm_client.py  logger.py
tests/: test_intent_router.py
tests/eval/: test_cases.json
ui/: app.py
(+7 files in other folders)
